# simple_voice_chat

./: Cargo.toml  high_level_design.txt
src/: client.rs  errors.rs  main.rs
